appId: com.webkul.bagisto.mobikul
---
- tapOn:
    text: "^Account$"
    waitToSettleTimeoutMs: 1000
- runFlow: dismiss_runtime_permissions.yaml
- runFlow:
    when:
      visible:
        text: "^My Orders$"
    commands:
      - retry:
          maxRetries: 2
          commands:
            - tapOn:
                text: "^Account$"
                rightOf: "^My Orders$"
                waitToSettleTimeoutMs: 1000
            - extendedWaitUntil:
                visible:
                  text: "^Logout$"
                timeout: 10000
      - scrollUntilVisible:
          element: "Logout"
          direction: DOWN
          timeout: 8000
          speed: 40
          visibilityPercentage: 50
          centerElement: true
      - tapOn:
          text: "^Logout$"
          waitToSettleTimeoutMs: 1000
      - assertVisible:
          text: "^Are you sure you want to logout\\?$"
      - tapOn:
          text: "^Logout$"
          rightOf: "^Cancel$"
          waitToSettleTimeoutMs: 1000
      - extendedWaitUntil:
          visible:
            text: "^Login$"
          timeout: 15000
- assertVisible:
    text: "^Sign Up$"
- assertVisible:
    text: "^Login$"
