appId: com.webkul.bagisto.mobikul
---
- tapOn:
    text: "^Enter your email$"
- inputText: ${USER_EMAIL}
- tapOn:
    text: "^Enter your password$"
- inputText: ${USER_PASSWORD}
- hideKeyboard
- tapOn:
    text: "^Login$"
    below: "^Forgot Password\\?$"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 1500
- runFlow: dismiss_runtime_permissions.yaml
- extendedWaitUntil:
    visible:
      text: "^My Orders$"
    timeout: 15000
- assertVisible:
    text: "^My Orders$"
