appId: com.webkul.bagisto.mobikul
---
- extendedWaitUntil:
    visible:
      text: "^Login$"
    timeout: 10000
- tapOn:
    text: "^Login$"
    rightOf: "^Sign Up$"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 1500
- extendedWaitUntil:
    visible:
      text: "^Welcome back!$"
    timeout: 10000
- assertVisible:
    text: "^Login to your account$"
